# h264_fsm

./: CMakeLists.txt  README.md  config_scheme.json  main_client.cpp  main_server.cpp
docs/wiki/: Architecture.md  Build.md  Home.md  Protocol.md  QoS_and_Logging.md  ReplacingStubWithRscoder.md  WireFormat.md
include/: client.hpp  common.hpp  encoder.hpp  logger.hpp  player.hpp  server.hpp
src/: client.cpp  common.cpp  encoder.cpp  logger.cpp  player.cpp  server.cpp
tests/: CMakeLists.txt  test_common.cpp  test_encoder.cpp  test_player.cpp  test_server_helpers.cpp
